objects/Lesson_Learned__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items_Status_Comments__c</fullName>
        <description>Long text area status fields to support comments, next steps, etc.  to help track this item  to close</description>
        <inlineHelpText>Long text area status field to support comments, next steps, etc. to help track this item  to close</inlineHelpText>
        <label>Action Items/Status Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the resource responsible for execution and management of this item to close</description>
        <inlineHelpText>Name of the resource responsible for execution and management of this item to close</inlineHelpText>
        <label>Assigned To Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lessons Learned (Assigned To Name)</relationshipLabel>
        <relationshipName>Lessons_Learned1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Used to classify or group this item</description>
        <inlineHelpText>Used to classify or group this item</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Release Process Change</fullName>
                </value>
                <value>
                    <fullName>Test Case Add/Update/Del</fullName>
                </value>
                <value>
                    <fullName>Release Task Candidate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_before_in_Release_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the release in which this item was resolved</description>
        <inlineHelpText>Identifies the release in which this item was resolved</inlineHelpText>
        <label>Completed before/in Release Number</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Lessons Learned (Completed before/in Release Number)</relationshipLabel>
        <relationshipName>Lessons_Learned1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Long text area field that outlines the detailed description of the lesson learned. Includes any initial thoughts on how to tackle this item</description>
        <inlineHelpText>Long text area field that outlines the detailed description of the lesson learned. Includes any initial thoughts on how to tackle this item</inlineHelpText>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Amount of effort required to implement this item</description>
        <inlineHelpText>Amount of effort required to implement this item</inlineHelpText>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Release_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release in which this item was captured</description>
        <inlineHelpText>Release in which this item was captured</inlineHelpText>
        <label>Originating Release Number</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_to_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if this item should be reviewed with business partners</description>
        <inlineHelpText>Flag to indicate if this item should be reviewed with business partners</inlineHelpText>
        <label>Publish to Business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Long text area field that outlines the detailed resolution of this item</description>
        <inlineHelpText>Long text area field that outlines the detailed resolution of this item</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the resource who identified this item</description>
        <inlineHelpText>Name of the resource who identified this item</inlineHelpText>
        <label>Source Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Short version status field for use in reporting and list views</description>
        <inlineHelpText>Short version status field for use in reporting and list views</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Current goal date for resolution of this item</description>
        <inlineHelpText>Current goal date for resolution of this item</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Lesson Learned</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Lessons Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Resolution_Req_Status_Completed_Canceled</fullName>
        <active>true</active>
        <description>Resolution is Required if Status Equals Completed or Canceled</description>
        <errorConditionFormula>AND (OR (ISPICKVAL(Status__c, &quot;Completed&quot;),
ISPICKVAL(Status__c, &quot;Canceled&quot;)),
ISBLANK(Resolution__c))</errorConditionFormula>
        <errorDisplayField>Resolution__c</errorDisplayField>
        <errorMessage>Resolution is Required if Status Equals &quot;Completed&quot; or &quot;Canceled&quot;</errorMessage>
    </validationRules>
</CustomObject>